Wrap words in ProductCard to avoid overflow

--- a/src/styles/product/ProductCard.module.css
+++ b/src/styles/product/ProductCard.module.css
@@ -23,6 +23,7 @@
   flex-direction: column;
   gap: 16px;
   margin-left: 64px;
+  word-wrap: break-word;
 }
 
 .details > h1 {
